# reach

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  dependencies.repos  multiple_config.bash  package.xml
moveit_reach_plugins/: CHANGELOG.rst  CMakeLists.txt  README.md  display_plugin_description.xml  eval_plugin_description.xml  ik_plugin_description.xml  package.xml  plugin_description.xml
moveit_reach_plugins/demo/: README.md
moveit_reach_plugins/demo/config/: params.yaml  part.ply  robot.launch
moveit_reach_plugins/demo/model/: reach_study.srdf  reach_study.xacro
moveit_reach_plugins/demo/model/motoman_sia20d/: motoman_sia20d_macro.xacro
moveit_reach_plugins/demo/results/reach_study/: study.db
moveit_reach_plugins/demo/test/: demo.test
moveit_reach_plugins/include/moveit_reach_plugins/: utils.h
moveit_reach_plugins/include/moveit_reach_plugins/display/: moveit_reach_display.h
moveit_reach_plugins/include/moveit_reach_plugins/evaluation/: distance_penalty_moveit.h  joint_penalty_moveit.h  manipulability_moveit.h
moveit_reach_plugins/include/moveit_reach_plugins/ik/: cartesian_retrieval_ik_solver.h  discretized_moveit_ik_solver.h  moveit_ik_solver.h  planner_based_ik_solver.h
moveit_reach_plugins/launch/: setup.launch  start.launch
moveit_reach_plugins/src/: reach_study_node.cpp  utils.cpp
moveit_reach_plugins/src/display/: moveit_reach_display.cpp
moveit_reach_plugins/src/evaluation/: distance_penalty_moveit.cpp  joint_penalty_moveit.cpp  manipulability_moveit.cpp
moveit_reach_plugins/src/ik/: cartesian_retrieval_ik_solver.cpp  discretized_moveit_ik_solver.cpp  moveit_ik_solver.cpp  planner_based_ik_solver.cpp
moveit_reach_plugins/test/: config.yaml  plugin_test.launch  plugin_test_node.cpp
reach/: CHANGELOG.rst  CMakeLists.txt  package.xml  requirements.txt
reach/include/reach/: plugin_utils.h  reach_study.h  reach_visualizer.h  types.h  utils.h
reach/scripts/: heat_map_generator.py  rbf_cross_validation.py  test_reach.py
reach/src/: plugin_utils.cpp  reach_study_comparison.cpp  reach_visualizer.cpp  types.cpp
reach/src/app/: data_loader_node.cpp  reach_study_node.cpp
reach/src/plugins/: boost_progress_console_logger.cpp  console_logger.cpp  multiplicative_evaluator.cpp  point_cloud_target_pose_generator.cpp
reach/src/python/: CMakeLists.txt  display.hpp  evaluator.hpp  ik_solver.hpp  logger.hpp  python_bindings.cpp  target_pose_generator.hpp  utils.h  utils.hpp
reach/test/: reach_study.yaml  reach_study_utest.cpp
reach_core/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
reach_core/config/: reach_study_config.rviz  reach_study_object.yaml
reach_core/include/reach_core/: ik_helper.h  plugin_utils.h  reach_database.h  reach_study.h  reach_study_comparison.h  reach_visualizer.h  study_parameters.h  types.h  utils.h
reach_core/launch/: combo.launch  setup.launch  setup.launch.py  start.launch  start.launch.py  start_demo.launch.py  start_rezilienth.launch.py
reach_core/rviz/: reach_study_config.rviz
reach_core/src/: data_loader_node.cpp  load_point_cloud_server_node.cpp  plugin_utils.cpp  reach_database.cpp  reach_study.cpp  reach_study_comparison.cpp  reach_visualizer.cpp  robot_reach_study_node.cpp  sample_mesh_server_node.cpp  utils.cpp
reach_core/src/app/: data_loader_node.cpp  reach_study_node.cpp
reach_core/src/core/: ik_helper.cpp  reach_database.cpp  reach_study.cpp  reach_study_comparison.cpp  reach_visualizer.cpp
reach_core/src/interfaces/: ik_solver.cpp
reach_core/src/plugins/: boost_progress_console_logger.cpp  console_logger.cpp  ik_solver_base.cpp  logger.cpp  logger.h  multiplicative_evaluator.cpp  multiplicative_factory.cpp  multiplicative_factory.h  no_op.cpp  point_cloud_target_pose_generator.cpp  point_cloud_target_pose_generator.h
reach_core/src/utils/: database_utils.cpp  general_utils.cpp  kinematics_utils.cpp  visualization_utils.cpp
reach_core/test/: CMakeLists.txt  plugin.test  plugin_utest.cpp  reach_study.yaml  reach_study_utest.cpp
reach_demo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
reach_demo/config/: params.yaml  part.pcd  part.ply
reach_demo/launch/: planning_context.launch  robot.launch  robot.launch.py
reach_demo/model/: motoman_sia20d_macro.xacro  reach_study.srdf.xacro  reach_study.xacro
reach_demo/model/motoman_sia20d/: NOTICE  motoman_sia20d.ros2_control.xacro  motoman_sia20d_macro.xacro
reach_demo/results/reach_study/: optimized_reach.db  reach.db
reach_demo/test/: demo.test
reach_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
reach_msgs/msg/: ReachDatabase.msg  ReachRecord.msg
reach_msgs/srv/: LoadPointCloud.srv
reach_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
reach_plugins/include/reach_plugins/: utils.h
reach_plugins/src/: utils.cpp
reach_plugins/src/display/: moveit_reach_display.cpp
reach_plugins/src/evaluation/: distance_penalty_moveit.cpp  joint_penalty_moveit.cpp  manipulability_moveit.cpp  multiplicative_factory.cpp
reach_plugins/src/ik/: discretized_moveit_ik_solver.cpp  moveit_ik_solver.cpp
reach_plugins/test/: config.yaml  plugin_test_node.cpp
reach_ros/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
reach_ros/demo/: CMakeLists.txt  README.md
reach_ros/demo/config/: params.yaml  part.pcd  reach_study.yaml  robot.launch
reach_ros/demo/model/: joint_limits.yaml  kinematics.yaml  reach_study.xacro
reach_ros/demo/test/: demo.test
reach_ros/include/reach_ros/: utils.h
reach_ros/launch/: reach_study_config.rviz  setup.launch  setup.launch.py  start.launch  start.launch.py
reach_ros/src/: reach_study_node.cpp  utils.cpp
reach_ros/src/display/: moveit_reach_display.cpp  moveit_reach_display.h  ros_display.cpp  ros_reach_display.cpp  ros_reach_display.h
reach_ros/src/evaluation/: distance_penalty_moveit.cpp  joint_penalty_moveit.cpp  manipulability_moveit.cpp
reach_ros/src/ik/: moveit_ik_solver.cpp  moveit_ik_solver.h
src/python/: CMakeLists.txt  ik_solver.hpp  logger.hpp  python_bindings.cpp  utils.hpp
(+133 files in other folders)
