<?xml version="1.0"?>
<package format="2">
  <name>reach</name>
  <version>1.6.0</version>
  <description>The reach package</description>

  <license>Apache 2.0</license>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>ros_industrial_cmake_boilerplate</depend>
  <depend>boost_plugin_loader</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libomp-dev</depend>
  <depend>yaml-cpp</depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
