<?xml version="1.0"?>
<package format="2">
  <name>moveit_reach_plugins</name>
  <version>0.0.0</version>
  <description>The moveit_reach_plugins package</description>

  <maintainer email="mripperger@swri.org">mripperger</maintainer>
  <author email="mripperger@swri.org">mripperger</author>

  <license>TODO</license>

  <url type="website">https://github.com/ros-industrial/reach</url>
  <url type="bugtracker">https://github.com/ros-industrial/reach/issues</url>
  <url type="repository">https://github.com/ros-industrial/reach/</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>tf2_eigen</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>reach_core</depend>
  <depend>reach_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
