<?xml version="1.0"?>
<package format="3">
  <name>reach</name>
  <version>0.0.0</version>
  <description>The reach metapackage</description>

  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <author email="michael.ripperger@swri.org">mripperger</author>
  <maintainer email="lovro.ivanov@gmail.com">livanov93</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/ros-industrial/reach</url>
  <url type="bugtracker">https://github.com/ros-industrial/reach/issues</url>
  <url type="repository">https://github.com/ros-industrial/reach/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!--  <exec_depend>reach_msgs</exec_depend>-->
<!--  <exec_depend>reach_core</exec_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
