<?xml version="1.0"?>
<package>
  <name>reach</name>
  <version>0.2.2</version>
  <description>The reach metapackage</description>

  <maintainer email="michael.ripperger@swri.org">mripperger</maintainer>
  <author email="michael.ripperger@swri.org">mripperger</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reach_msgs</run_depend>
  <run_depend>reach_core</run_depend>

  <export>
    <metapackage />
  </export>

</package>
