<?xml version="1.0"?>
<package format="2">
  <name>reach_core</name>
  <version>0.1.0</version>
  <description>The reach_core package</description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/ros-industrial/reach</url>
  <url type="bugtracker">https://github.com/ros-industrial/reach/issues</url>
  <url type="repository">https://github.com/ros-industrial/reach/</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_core</depend>
  <depend>pcl_conversions</depend>
<!--   <depend>pcl_ros</depend>-->
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>reach_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>std_msgs</depend>

  <export>
    <reach_core plugin="${prefix}/plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
