<?xml version="1.0"?>
<package format="2">
  <name>reach_core</name>
  <version>0.2.2</version>
  <description>The reach_core package</description>

  <license>Apache 2.0</license>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <test_depend>rosunit</test_depend>

  <export>
    <reach_core plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
