<?xml version="1.0"?>
<package format="2">
  <name>reach_core</name>
  <version>0.1.1</version>
  <description>The reach_core package</description>

  <license>Apache 2.0</license>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>reach_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <test_depend>rosunit</test_depend>

  <export>
    <reach_core plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
